# llm

./: Cargo.toml  README.md
.github/homebrew/: formula.rb.tmpl
.github/workflows/: build-and-release.yml
crates/llm-cli/: Cargo.toml
crates/llm-cli/src/: cli.rs  lib.rs  main.rs
crates/llm-cli/tests/: cli_behavior.rs  cli_commands.rs  cli_help.rs
crates/llm-core/: Cargo.toml
crates/llm-core/src/: attachments.rs  chat.rs  client.rs  config.rs  lib.rs  models.rs  render.rs  search.rs  usage.rs
crates/llm-core/tests/: attachments.rs  chat.rs  client_stream.rs  config.rs  models.rs  render.rs  search.rs  usage.rs
docs/: manual-testing.md
src/: main.rs  search.rs
