[package]
name = "llm-core"
version = "0.3.0"
edition = "2024"

[lib]
name = "llm_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.34.1"
toml = "0.9"
